--- a/app/assets/stylesheets/modules/dashboard/_new_dash_layouts.scss
+++ b/app/assets/stylesheets/modules/dashboard/_new_dash_layouts.scss
@@ -201,7 +201,7 @@
     padding: 0;
     figure {
       background: transparent;
-      width: 100%;
+      width: 50%;
       margin: 0;
       padding: 0;
       display: flex;
